--- a/home.html
+++ b/home.html
@@ -152,8 +152,11 @@
 									<span class=""><img src="images/movie_app.png" alt="" width="300px"/></span>
 									<h3>Movie App</h3>
 									<p>Js, HTML,CSS, Express, EJS, Mongoose, MongoDB, Axios, API </p>
-									<a href="https://github.com/BISrat3/Movie_Project2" class="btn" target="_blank"><button  type="button" class="btn btn-secondary">GitHub</button></a>
+									<div>
+										<a href="https://github.com/BISrat3/Movie_Project2" class="btn" target="_blank"><button  type="button" class="btn btn-secondary">GitHub</button></a>
 									<a href="https://movie-app-1305.herokuapp.com/movies" class="btn" target="_blank" ><button  type="button" class="btn btn-success">Live</button></a>
+									</div>
+									
 								</section>
 								<br>
 
