--- a/home.html
+++ b/home.html
@@ -289,11 +289,6 @@
 								</section>
 							</div>
 						</div>
-						<footer class="major">
-							<ul class="actions special">
-								<li></li>
-							</ul>
-						</footer>
 					</div>
 				</section>
 
@@ -324,7 +319,7 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; | ALL RIGHTS RESERVED</li><li>Design: <a href="http://html5up.net">Bisrat3 </a></li>
+						<li>&copy; | ALL RIGHTS RESERVED</li><li>Design: <a href="http://html5up.net" class="alink">Bisrat3 </li></a>
 					</ul>
 				</footer>
 
