--- a/home.html
+++ b/home.html
@@ -21,18 +21,9 @@
 							<li class="headerh2-nav">
 								<a href="#">About</a>
 								<ul>
-									<li class="headerh2-nav"><a href="left-sidebar.html">About</a></li>
+									<li class="headerh2-nav"><a href="#one">About</a></li>
 									<li class="headerh2-nav"><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li class="headerh2-nav"><a href="no-sidebar.html">No Sidebar</a></li>
-									<!-- <li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li> -->
 								</ul>
 							</li>
 							<li class="headerh2-nav"><a href="#two">Expereience</a></li>
@@ -291,24 +282,6 @@
 						</div>
 					</div>
 				</section>
-
-			<!-- Five -->
-				<!-- <section id="five" class="wrapper style3 special">
-					<div class="container first-container">
-						<header>
-							<h2 class="experience-p">Feel free to communciate</h2>
-							<p class="experience-p"></p>
-						</header>
-
-						<form method="post" action="" class="cta">
-							
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
-					</div>
-				</section> -->
 
 			<!-- Footer -->
 				<footer id="footer">
