--- a/home.html
+++ b/home.html
@@ -233,7 +233,7 @@
 									</span>
 									<h3 class="title">Simon Game</h3>
 
-									<p class="title-p">JavaScript, HTML, CSS.</p>
+									<p class="title-p" width="310px">JavaScript, HTML, CSS.</p>
 									<div>
 										<a href="https://github.com/BISrat3/Project1_Simon" class="btn" target="_blank"><button  type="button" class="btn btn-secondary">GitHub</button></a>
 									</div>
@@ -242,9 +242,8 @@
 								<section class="col-5 col-6-medium col-12-xsmall">
 									<span class=""><img src="images/movie_app.png" alt="" width="310px" height="182.58"/></span>
 									<h3 class="title">Movie App</h3>
-									<p class="title-p">
+									<p class="title-p"  width="310px" >
 										Javascript, HTML,CSS, Express, EJS 
-									
 										Mongoose, MongoDB, Axios, API</p>
 									<div>
 										<a href="https://github.com/BISrat3/Movie_Project2" class="btn" target="_blank"><button  type="button" class="btn btn-secondary">GitHub</button></a>
@@ -259,7 +258,7 @@
 										<img src="images/Soccer player.png" alt="" width="310px"  height="182.58"/>
 									</span>
 									<h3 class="title">Soccer Player App</h3>
-									<p class="title-p">HTML, CSS, JavaScript, React
+									<p class="title-p" width="310px">HTML, CSS, JavaScript, React
 										 React Bootstrap , Sportmonk-API, Postman</p>
 									<div>
 										<a href="https://github.com/BISrat3/Soccer-frontend" class="btn" target="_blank"><button  type="button" class="btn btn-secondary" >GitHub</button></a>
@@ -270,9 +269,9 @@
 									
 									<span class=""><img src="images/Men's Store.png" alt="" width="310px" height="182.58" /></span>
 									<h3 class="title">Men's Style Store</h3>
-									<p class="title-p">HTML, CSS, JavaScript,Bulma, Python
-										 Django, BootStrap,Postgresql, Heroku
-										</p>
+									<p class="title-p" width="310px">HTML, CSS, JavaScript,Bulma, Python, 
+										Django, BootStrap, Postgresql, Heroku
+									</p>
 									<div>
 										<a href="https://github.com/BISrat3/Style-App" class="btn" target="_blank"><button  type="button" class="btn btn-secondary">GitHub</button></a>
 										<a href="https://mens-styles-store.herokuapp.com/" class="btn" target="_blank"><button  type="button" class="btn btn-success">Live</button></a>
